chore(.gitignore): Expand ignore patterns for Python, backend, and frontend artifacts
- Add Python-specific patterns (venv/, __pycache__/, *.py[cod], .pytest_cache/)
- Add backend data and output directories (logs/, mlruns/, data_lake/, reports/)
- Add environment variable files (.env, .env.*, with .env.example exception)
- Add frontend build artifacts (*.tsbuildinfo, .eslintcache, coverage/)
- Improve project cleanliness by preventing accidental commits of generated files and sensitive data

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,26 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Python
+venv/
+__pycache__/
+*.py[cod]
+*.pyo
+.pytest_cache/
+
+# Backend data & outputs
+backend/logs/
+backend/mlruns/
+backend/data_lake/
+backend/reports/
+
+# Environment variables
+.env
+.env.*
+!.env.example
+
+# Frontend
+*.tsbuildinfo
+.eslintcache
+coverage/
