feat(data-integrity): Implement Data Integrity & Validation Framework with Pandera schema validation
- Add comprehensive Data Integrity & Validation Framework module with context-aware validation (DAILY vs BACKFILL modes)
- Implement OHLCVValidator with Pandera-based schema validation for structural, logical, temporal, and statistical checks
- Add ActionProcessor for configurable data remediation policies (DROP, INTERPOLATE, FFILL, WARN)
- Implement SmartCatchUpService for automatic gap detection and historical data backfill on startup
- Add ValidationReport and ValidationIssue models for detailed validation tracking and spike classification
- Create comprehensive validation pipeline with spike detection logic differentiated by context
- Add ValidationContext and Action enums for policy configuration
- Add custom exception hierarchy for integrity module error handling
- Update backend README with detailed Data Integrity Framework documentation including validation pipeline tables and usage examples
- Add test suite with smoke tests and property-based tests for integrity validation
- Update .gitignore to include .venv/, .hypothesis/, and .kiro/ directories
- Update backend/requirements.txt with new dependencies
- Update daily_update.py script to integrate validation framework into data ingestion pipeline
- Add comprehensive framework documentation in doc/Data Integrity & Validation Framework.md

--- a/.gitignore
+++ b/.gitignore
@@ -26,11 +26,12 @@ dist-ssr
 *.sw?
 
 # Python
-venv/
+.venv/
 __pycache__/
 *.py[cod]
 *.pyo
 .pytest_cache/
+.hypothesis/
 
 # Backend data & outputs
 backend/logs/
@@ -47,3 +48,6 @@ backend/reports/
 *.tsbuildinfo
 .eslintcache
 coverage/
+
+# ai
+.kiro/
