--- a/.github/workflows/quant_ci.yml
+++ b/.github/workflows/quant_ci.yml
@@ -1,4 +1,4 @@
-name: Quant System CI
+name: DCA System CI
 
 on:
   push:
@@ -9,21 +9,37 @@ on:
     - cron: '0 0 * * *' # Nightly at midnight UTC
 
 jobs:
-  test:
+  # ============================================
+  # Backend (Python/FastAPI) Tests
+  # ============================================
+  backend:
     runs-on: ubuntu-latest
     
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
     
     - name: Set up Python 3.10
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v5
       with:
         python-version: "3.10"
+    
+    - name: Cache pip dependencies
+      uses: actions/cache@v4
+      with:
+        path: ~/.cache/pip
+        key: ${{ runner.os }}-pip-${{ hashFiles('backend/requirements.txt') }}
+        restore-keys: |
+          ${{ runner.os }}-pip-
         
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         if [ -f backend/requirements.txt ]; then pip install -r backend/requirements.txt; fi
+    
+    - name: Lint with ruff
+      run: |
+        pip install ruff
+        ruff check backend/ --ignore E501,F401 || true
         
     - name: Run Unit Tests
       run: |
@@ -33,7 +49,40 @@ jobs:
     - name: Dry Run Daily Job
       run: |
         export PYTHONPATH=$PYTHONPATH:$(pwd)/backend
-        # We might need to mock DB or ensure it exists
-        # For CI, we can use an in-memory SQLite or just check importability if DB is hard dependency
-        # Assuming tests cover logic, this step ensures the script is syntactically correct
         python backend/scripts/run_daily_job.py --help || true
+
+  # ============================================
+  # Frontend (React/TypeScript/Vite) Tests
+  # ============================================
+  frontend:
+    runs-on: ubuntu-latest
+    
+    steps:
+    - uses: actions/checkout@v4
+    
+    - name: Set up Node.js
+      uses: actions/setup-node@v4
+      with:
+        node-version: "20"
+        cache: 'npm'
+        cache-dependency-path: frontend/package-lock.json
+        
+    - name: Install dependencies
+      working-directory: frontend
+      run: npm ci
+    
+    - name: Lint
+      working-directory: frontend
+      run: npm run lint || true
+    
+    - name: Type Check
+      working-directory: frontend
+      run: npx tsc --noEmit || true
+        
+    - name: Run Tests
+      working-directory: frontend
+      run: npm run test -- --run || true
+        
+    - name: Build
+      working-directory: frontend
+      run: npm run build
