feat(infrastructure): Add database migrations, circuit breaker, and data freshness monitoring
- Initialize Alembic database migration system with configuration and initial schema
- Add circuit breaker pattern implementation for resilient service calls with configurable failure thresholds and recovery timeouts
- Add data freshness monitoring module to track and warn on data lag exceeding configured thresholds
- Enhance environment configuration with Phase 3 parameters for circuit breaker and data freshness
- Update health endpoint to include migration status and infrastructure health checks
- Add migration service core module for managing database schema evolution
- Add comprehensive infrastructure Phase 3 test suite covering circuit breaker, freshness, and migration scenarios
- Update data fetcher to integrate with new monitoring and freshness tracking systems
- Update main application initialization to run database migrations on startup

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -44,3 +44,18 @@ JOB_RETRY_BASE_DELAY=4.0
 
 # Maximum retry delay cap (seconds)
 JOB_RETRY_MAX_DELAY=60.0
+
+# =============================================================================
+# Data Freshness (Phase 3)
+# =============================================================================
+# Maximum acceptable data lag in hours before warning
+DATA_FRESHNESS_THRESHOLD_HOURS=24.0
+
+# =============================================================================
+# Circuit Breaker (Phase 3)
+# =============================================================================
+# Number of consecutive failures before circuit opens
+CIRCUIT_BREAKER_FAILURE_THRESHOLD=5
+
+# Seconds before attempting recovery from OPEN state
+CIRCUIT_BREAKER_RECOVERY_TIMEOUT=60.0
