feat(infrastructure): Add Docker Compose setup, database pooling, and frontend containerization
- Add docker-compose.override.yml for development environment with hot reload and volume mounts
- Restructure docker-compose.yml to consolidate services into single API service with Redis and worker
- Implement database engine factory with SQLite/PostgreSQL support and connection pooling
- Add QueuePool configuration for PostgreSQL with pre-ping health checks and connection recycling
- Expand .env.example with detailed database configuration examples and Redis setup
- Add frontend Dockerfile for containerized frontend deployment
- Update nginx.conf for improved routing and service configuration
- Simplify development setup by consolidating microservices into unified architecture
- Enable hot reload and live code editing in development environment via volume mounts

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -5,9 +5,24 @@
 # Database Configuration
 # =============================================================================
 # SQLAlchemy database URL
-# For SQLite (default): sqlite:///./data/database.sqlite
-# For PostgreSQL: postgresql://user:password@localhost/dbname
+#
+# SQLite (default - recommended for personal use):
+#   DATABASE_URL=sqlite:///./data/database.sqlite
+#
+# PostgreSQL (for production/scaling):
+#   DATABASE_URL=postgresql://user:password@localhost:5432/quant_db
+#
+# Docker (SQLite with volume):
+#   DATABASE_URL=sqlite:///./data/database.sqlite
+#
 DATABASE_URL=sqlite:///./data/database.sqlite
+
+# =============================================================================
+# Redis Configuration (for job queue)
+# =============================================================================
+# Local: redis://localhost:6379
+# Docker: redis://redis:6379
+REDIS_URL=redis://localhost:6379
 
 # =============================================================================
 # Data Lake Configuration
