--- a/nginx.conf
+++ b/nginx.conf
@@ -1,53 +1,99 @@
-events {}
+events {
+    worker_connections 1024;
+}
 
 http {
-    upstream valuation_service {
-        server valuation-service:8001;
+    # Upstream for the unified API service
+    upstream api_backend {
+        server api:8000;
+        keepalive 32;
     }
 
-    upstream portfolio_service {
-        server portfolio-service:8002;
-    }
-
-    upstream data_service {
-        server data_service:8003;
-    }
+    # Rate limiting zone (optional, good for personal use protection)
+    limit_req_zone $binary_remote_addr zone=api_limit:10m rate=10r/s;
 
     server {
         listen 80;
+        server_name localhost;
 
-        # Valuation Service
-        location /api/v1/valuation {
-            proxy_pass http://valuation_service;
+        # Gzip compression
+        gzip on;
+        gzip_types application/json text/plain text/css application/javascript;
+        gzip_min_length 1000;
+
+        # =================================================================
+        # API Routes - Proxy to backend
+        # =================================================================
+        location /api/ {
+            proxy_pass http://api_backend;
+            proxy_http_version 1.1;
+            
+            # Headers
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header X-Request-ID $request_id;
+            
+            # Connection settings
+            proxy_set_header Connection "";
+            proxy_connect_timeout 60s;
+            proxy_send_timeout 60s;
+            proxy_read_timeout 60s;
+            
+            # Rate limiting (burst allows short spikes)
+            limit_req zone=api_limit burst=20 nodelay;
         }
 
-        # Portfolio Service (and Market)
-        location /api/v1/portfolio {
-            proxy_pass http://portfolio_service;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-        }
-        
-        location /api/v1/market {
-            proxy_pass http://portfolio_service;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-        }
-
-        # Data Service (WebSocket)
+        # =================================================================
+        # WebSocket Support (for real-time data if needed)
+        # =================================================================
         location /ws {
-            proxy_pass http://data_service;
+            proxy_pass http://api_backend;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "Upgrade";
             proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            
+            # WebSocket timeout (keep alive for 1 hour)
+            proxy_read_timeout 3600s;
+            proxy_send_timeout 3600s;
         }
-        
-        # Health Check
+
+        # =================================================================
+        # Health Check Endpoint
+        # =================================================================
         location /health {
-            return 200 '{"status": "healthy", "gateway": "nginx"}';
+            proxy_pass http://api_backend/api/v1/health;
+            proxy_set_header Host $host;
+        }
+
+        # Gateway health (doesn't require backend)
+        location /gateway/health {
+            return 200 '{"status": "healthy", "service": "nginx-gateway"}';
+            add_header Content-Type application/json;
+        }
+
+        # =================================================================
+        # Root - Redirect to API docs or frontend
+        # =================================================================
+        location / {
+            # Option 1: Redirect to API docs
+            return 302 /api/v1/docs;
+            
+            # Option 2: If serving frontend through nginx, uncomment below:
+            # proxy_pass http://frontend:5173;
+            # proxy_set_header Host $host;
+        }
+
+        # =================================================================
+        # Error pages
+        # =================================================================
+        error_page 502 503 504 /50x.json;
+        location = /50x.json {
+            internal;
+            return 503 '{"error": "Service temporarily unavailable", "code": 503}';
             add_header Content-Type application/json;
         }
     }
