feat(backend): Add structured logging, rate limiting, and configuration management
- Add structured logger module with emoji support and dev mode for enhanced debugging
- Implement token bucket rate limiter for API request throttling (configurable requests/sec and burst size)
- Add comprehensive error handler with retry logic and graceful degradation patterns
- Create quantitative configuration module for factor weights and market regime management
- Expand environment configuration with rate limiting, logging, valuation, optimization, and factor weight settings
- Add pre-commit hooks configuration for code quality (Black, isort, mypy, ruff)
- Refactor yfinance provider with structured logging, rate limiting, and improved error handling
- Update valuation engines (DCF, core) with configuration-driven parameters
- Enhance factor calculation with configurable weights and market regime support
- Add comprehensive test suite for new modules (config, error handler, rate limiter, structured logger)
- Add py.typed marker for full type hint support
- Add pytest configuration with coverage and output settings
- Improve code quality and maintainability across data providers, adapters, and services
- These changes establish Phase 4 infrastructure for production-grade reliability and observability

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -74,3 +74,48 @@ CIRCUIT_BREAKER_FAILURE_THRESHOLD=5
 
 # Seconds before attempting recovery from OPEN state
 CIRCUIT_BREAKER_RECOVERY_TIMEOUT=60.0
+
+# =============================================================================
+# Rate Limiting
+# =============================================================================
+# Requests per second (e.g. 2.0 = 2 calls/sec)
+RATE_LIMIT_REQUESTS_PER_SECOND=2.0
+
+# Burst size (allow short bursts of traffic)
+RATE_LIMIT_BURST_SIZE=5
+
+# =============================================================================
+# Logging
+# =============================================================================
+# Enable developer mode (emojis, more verbose console output)
+LOG_DEV_MODE=false
+
+# =============================================================================
+# Valuation Defaults
+# =============================================================================
+# WACC (Weighted Average Cost of Capital)
+VALUATION_WACC=0.09
+
+# Growth Rate for initial stage
+VALUATION_GROWTH_RATE=0.05
+
+# Terminal Growth Rate
+VALUATION_TERMINAL_GROWTH=0.02
+
+# =============================================================================
+# Optimization Defaults
+# =============================================================================
+# Maximum weight per asset (0.10 = 10%)
+OPTIMIZATION_MAX_WEIGHT=0.10
+
+# Risk Aversion parameter for optimization
+OPTIMIZATION_RISK_AVERSION=1.0
+
+# =============================================================================
+# Factor Weights (Phase 4)
+# =============================================================================
+# JSON dictionary for Bull Market weights
+FACTOR_WEIGHTS_BULL='{"value": 0.3, "growth": 0.4, "momentum": 0.3}'
+
+# JSON dictionary for Bear Market weights
+FACTOR_WEIGHTS_BEAR='{"value": 0.5, "growth": 0.2, "momentum": 0.3}'
