--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,25 +1,48 @@
-fastapi
-uvicorn
-yfinance
-pydantic
-pydantic-settings
-sqlalchemy
-pandas
-numpy
-duckdb>=0.9.0
-pyarrow>=14.0.0
-httpx
-scipy
-redis
-cvxpy
-scikit-learn
-pytest
-hypothesis
-xgboost
-shap
-deap
-mlflow
-ray[default]
-websockets
-pandera>=0.18.0
-pandas_market_calendars
+# Core web framework
+fastapi>=0.104.0,<1.0.0
+uvicorn[standard]>=0.24.0,<1.0.0
+pydantic>=2.5.0,<3.0.0
+pydantic-settings>=2.1.0,<3.0.0
+
+# Data & Finance
+yfinance>=0.2.33,<1.0.0
+pandas>=2.1.0,<3.0.0
+numpy>=1.26.0,<2.0.0
+
+# Database & Storage
+sqlalchemy>=2.0.0,<3.0.0
+duckdb>=0.9.0,<1.0.0
+pyarrow>=14.0.0,<16.0.0
+alembic>=1.13.0,<2.0.0
+
+# HTTP & Networking
+httpx>=0.25.0,<1.0.0
+websockets>=12.0,<13.0
+
+# Scientific Computing
+scipy>=1.11.0,<2.0.0
+cvxpy>=1.4.0,<2.0.0
+scikit-learn>=1.3.0,<2.0.0
+
+# ML & Optimization
+xgboost>=2.0.0,<3.0.0
+shap>=0.44.0,<1.0.0
+deap>=1.4.0,<2.0.0
+mlflow>=2.9.0,<3.0.0
+
+# Distributed Computing
+ray[default]>=2.9.0,<3.0.0
+
+# Data Validation
+pandera>=0.18.0,<1.0.0
+pandas_market_calendars>=4.3.0,<5.0.0
+
+# Caching
+redis>=5.0.0,<6.0.0
+
+# Testing
+pytest>=7.4.0,<8.0.0
+pytest-asyncio>=0.21.0,<1.0.0
+pytest-cov>=4.1.0,<5.0.0
+hypothesis>=6.92.0,<7.0.0
+
