--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,5 @@
 # Core web framework
-fastapi>=0.104.0,<1.0.0
+fastapi[standard]>=0.104.0,<1.0.0
 uvicorn[standard]>=0.24.0,<1.0.0
 pydantic>=2.5.0,<3.0.0
 pydantic-settings>=2.1.0,<3.0.0
@@ -17,7 +17,7 @@ alembic>=1.13.0,<2.0.0
 
 # HTTP & Networking
 httpx>=0.25.0,<1.0.0
-websockets>=12.0,<13.0
+websockets>=13.0,<15.0
 
 # Scientific Computing
 scipy>=1.11.0,<2.0.0
@@ -28,6 +28,9 @@ scikit-learn>=1.3.0,<2.0.0
 xgboost>=2.0.0,<3.0.0
 shap>=0.44.0,<1.0.0
 deap>=1.4.0,<2.0.0
+hmmlearn>=0.3.0,<0.4.0
+transformers>=4.30.0,<5.0.0
+torch>=2.0.0,<3.0.0
 mlflow>=2.9.0,<3.0.0
 
 # Distributed Computing
