--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -8,6 +8,7 @@ pydantic-settings>=2.1.0,<3.0.0
 yfinance>=0.2.33,<1.0.0
 pandas>=2.1.0,<3.0.0
 numpy>=1.26.0,<2.0.0
+lxml>=5.0.0
 
 # Database & Storage
 sqlalchemy>=2.0.0,<3.0.0
@@ -49,3 +50,6 @@ pytest-asyncio>=0.21.0,<1.0.0
 pytest-cov>=4.1.0,<5.0.0
 hypothesis>=6.92.0,<7.0.0
 
+
+# UI/UX
+tqdm>=4.66.0,<5.0.0
