feat: Introduce comprehensive ML Alpha Enhancement framework, integrating signal blending, SHAP, constrained GBM, residual alpha, and online regime detection, alongside new dashboards and security linters.

--- a/.github/workflows/quant_ci.yml
+++ b/.github/workflows/quant_ci.yml
@@ -86,3 +86,81 @@ jobs:
     - name: Build
       working-directory: frontend
       run: npm run build
+
+  # ============================================
+  # Security Scanning - Python Backend
+  # ============================================
+  security-python:
+    runs-on: ubuntu-latest
+    
+    steps:
+    - uses: actions/checkout@v4
+    
+    - name: Set up Python 3.10
+      uses: actions/setup-python@v5
+      with:
+        python-version: "3.10"
+    
+    - name: Install security tools
+      run: pip install pip-audit bandit[toml]
+    
+    - name: Dependency Vulnerability Scan (pip-audit)
+      run: |
+        echo "🔍 Scanning Python dependencies for known CVEs..."
+        pip-audit -r backend/requirements.txt --desc on --progress-spinner off || true
+    
+    - name: Static Security Analysis (bandit)
+      run: |
+        echo "🔍 Running static security analysis..."
+        bandit -r backend/ -c .bandit -ll -f json -o bandit-report.json || true
+        bandit -r backend/ -c .bandit -ll
+      continue-on-error: true
+    
+    - name: Upload Bandit Report
+      uses: actions/upload-artifact@v4
+      if: always()
+      with:
+        name: bandit-security-report
+        path: bandit-report.json
+        retention-days: 30
+
+  # ============================================
+  # Security Scanning - Frontend
+  # ============================================
+  security-frontend:
+    runs-on: ubuntu-latest
+    
+    steps:
+    - uses: actions/checkout@v4
+    
+    - name: Set up Node.js
+      uses: actions/setup-node@v4
+      with:
+        node-version: "20"
+    
+    - name: Install dependencies
+      working-directory: frontend
+      run: npm ci
+    
+    - name: NPM Audit (High/Critical only)
+      working-directory: frontend
+      run: |
+        echo "🔍 Scanning npm dependencies for vulnerabilities..."
+        npm audit --audit-level=high || true
+
+  # ============================================
+  # Secret Leak Detection
+  # ============================================
+  security-secrets:
+    runs-on: ubuntu-latest
+    
+    steps:
+    - uses: actions/checkout@v4
+      with:
+        fetch-depth: 0  # Full history for comprehensive scan
+    
+    - name: Gitleaks Secret Scan
+      uses: gitleaks/gitleaks-action@v2
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GITLEAKS_ENABLE_COMMENTS: false
