--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -27,6 +27,7 @@ scikit-learn>=1.3.0,<2.0.0
 
 # ML & Optimization
 xgboost>=2.0.0,<3.0.0
+lightgbm>=4.0.0,<5.0.0
 shap>=0.44.0,<1.0.0
 deap>=1.4.0,<2.0.0
 hmmlearn>=0.3.0,<0.4.0
